--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ bower_components/
 /node/**
 /node_tmp/**
 /node_modules/**
+.project
+package-lock.json
+
 
 # Locally stored "Eclipse launch configurations"
 *.launch
