--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cronapi-js",
-  "version": "0.0.91-d-s",
+  "version": "0.0.92-d-s-b",
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
   "scripts": {
