--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
