--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>cronapi-java</artifactId>
   <packaging>jar</packaging>
   <name>cronapi-java</name>
-  <version>0.0.162-d-s-b</version>
+  <version>0.0.163-d</version>
   <description>Public Java library for CronApp's users</description>
   <url>https://github.com/technecloud/cronapi-java</url>
   <build>
@@ -101,18 +101,18 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
-      <version>1.3.5.RELEASE</version>
+      <version>2.0.1.RELEASE</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
-      <version>1.3.5.RELEASE</version>
+      <version>2.0.1.RELEASE</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
-      <version>1.3.5.RELEASE</version>
+      <version>2.0.1.RELEASE</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
