--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>cronapi-java</artifactId>
   <packaging>jar</packaging>
   <name>cronapi-java</name>
-  <version>0.0.162-d-s-b</version>
+  <version>0.0.164-d</version>
   <description>Public Java library for CronApp's users</description>
   <url>https://github.com/technecloud/cronapi-java</url>
   <build>
@@ -190,6 +190,19 @@
       <version>6.14.3</version>
       <scope>test</scope>
     </dependency>
+
+      <dependency>
+          <groupId>org.apache.olingo</groupId>
+          <artifactId>olingo-odata2-jpa-processor-core</artifactId>
+          <version>2.0.7</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+          <version>1.3.5.RELEASE</version>
+      </dependency>
+
   </dependencies>
   <distributionManagement>
     <repository>
