--- a/pom.xml
+++ b/pom.xml
@@ -191,35 +191,17 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>io.cronapp</groupId>
-      <artifactId>odata-jpa-processor</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
-    </dependency>
+      <dependency>
+          <groupId>org.apache.olingo</groupId>
+          <artifactId>olingo-odata2-jpa-processor-core</artifactId>
+          <version>2.0.10</version>
+      </dependency>
 
-    <dependency>
-      <groupId>org.apache.olingo</groupId>
-      <artifactId>odata-server-api</artifactId>
-      <version>4.4.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.olingo</groupId>
-      <artifactId>odata-server-core</artifactId>
-      <version>4.4.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-      <version>1.3.5.RELEASE</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.fasterxml</groupId>
-      <artifactId>aalto-xml</artifactId>
-      <version>1.1.2-SNAPSHOT</version>
-    </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+          <version>1.3.5.RELEASE</version>
+      </dependency>
 
   </dependencies>
   <distributionManagement>
