--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>cronapi-java</artifactId>
   <packaging>jar</packaging>
   <name>cronapi-java</name>
-  <version>0.0.164-d</version>
+  <version>0.1.0-SNAPSHOT</version>
   <description>Public Java library for CronApp's users</description>
   <url>https://github.com/technecloud/cronapi-java</url>
   <build>
@@ -192,9 +192,9 @@
     </dependency>
 
       <dependency>
-          <groupId>org.apache.olingo</groupId>
+          <groupId>io.cronapp</groupId>
           <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-          <version>2.0.11-SNAPSHOT</version>
+          <version>1.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
@@ -210,6 +210,11 @@
       <name>artifactory.cronapp.io-releases</name>
       <url>https://artifactory.cronapp.io/public-release</url>
     </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <name>artifactory.cronapp.io-snapshots</name>
+      <url>https://artifactory.cronapp.io/public-snapshot</url>
+    </snapshotRepository>
   </distributionManagement>
   <properties>
     <maven.compiler.source>1.8</maven.compiler.source>
