--- a/pom.xml
+++ b/pom.xml
@@ -190,13 +190,16 @@
       <version>6.14.3</version>
       <scope>test</scope>
     </dependency>
-
-      <dependency>
-          <groupId>io.cronapp</groupId>
-          <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-          <version>1.0.0-SNAPSHOT</version>
-      </dependency>
-
+    <dependency>
+      <groupId>io.cronapp</groupId>
+      <artifactId>olingo-odata2-jpa-processor-core</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-web</artifactId>
+      <version>2.0.1.RELEASE</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <repository>
