--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cronapi-js",
-  "version": "0.0.119-d-s-b",
+  "version": "0.0.120-p",
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
   "scripts": {
