--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^2.1.2",
+    "gulp-util": "^3.0.8"
   }
 }
