--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,14 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <version>2.0.1.RELEASE</version>
     </dependency>
+
+
+      <dependency>
+          <groupId>commons-dbcp</groupId>
+          <artifactId>commons-dbcp</artifactId>
+          <version>1.4</version>
+      </dependency>
+
   </dependencies>
   <distributionManagement>
     <repository>
