--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>cronapp-reports-exec</artifactId>
-      <version>2.1.0-SNAPSHOT</version>
+      <version>2.1.0</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -213,7 +213,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-      <version>2.0-SNAPSHOT</version>
+      <version>2.1.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
