--- a/pom.xml
+++ b/pom.xml
@@ -213,7 +213,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <version>2.1.5</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
