--- a/pom.xml
+++ b/pom.xml
@@ -220,13 +220,18 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <version>2.0.1.RELEASE</version>
     </dependency>
-
-
       <dependency>
           <groupId>commons-dbcp</groupId>
           <artifactId>commons-dbcp</artifactId>
           <version>1.4</version>
       </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180813</version>
+    </dependency>
+
 
   </dependencies>
   <distributionManagement>
