--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <artifactId>cronapi-java</artifactId>
   <packaging>jar</packaging>
   <name>cronapi-java</name>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.1.27</version>
   <description>Public Java library for CronApp's users</description>
   <url>https://github.com/technecloud/cronapi-java</url>
   <build>
