--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel-minify": "^0.5.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8",
-    "gulp-babel-minify": "^0.5.0"
+    "gulp-util": "^3.0.8"
   }
 }
