--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,10 @@
           <artifactId>hibernate-entitymanager</artifactId>
           <groupId>org.hibernate</groupId>
         </exclusion>
+        <exclusion>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-core</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
     <dependency>
@@ -208,7 +212,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-      <version>2.2.1</version>
+      <version>2.2.2</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
