--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-      <version>2.2.5-SNAPSHOT</version>
+      <version>2.2.5</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
