--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "2.2.11",
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
+  "directories": {
+    "test": "mocha || true"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'src/test/*'"
   },
   "repository": {
     "type": "git",
@@ -22,13 +25,23 @@
     "javascript"
   ],
   "devDependencies": {
+    "chai": "^4.2.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-flowtype": "^4.3.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.15.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel-minify": "^0.5.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "mocha": "^6.2.1"
   },
   "dependencies": {
     "gulp-cli": "^2.2.0",
