--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cronapi-js",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
   "scripts": {
@@ -22,16 +22,16 @@
     "javascript"
   ],
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
+    "gulp": "3.9.1",
+    "gulp-autoprefixer": "3.1.1",
     "gulp-babel-minify": "^0.5.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "gulp-cli": "2.2.0"
   },
   "dependencies": {
-    "gulp-cli": "^2.2.0",
-    "natives": "^1.1.6"
+    "natives": "1.1.6"
   }
 }
