--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
-    "gulp-util": "^3.0.8"
+    "gulp-util": "^3.0.8",
+    "gulp-cli": "2.2.0"
   },
   "dependencies": {
-    "gulp-cli": "^2.2.0",
-    "natives": "^1.1.6"
+    "natives": "1.1.6"
   }
 }
