--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>cronapp-reports-exec</artifactId>
-      <version>2.6.0-SNAPSHOT</version>
+      <version>2.5.0</version>
       <scope>compile</scope>
       <exclusions>
         <exclusion>
@@ -220,7 +220,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-      <version>2.6.0-SNAPSHOT</version>
+      <version>2.5.2</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
