--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <packaging>jar</packaging>
    <!--Force Build-->
   <name>cronapi-java</name>
-  <version>2.6.0-SNAPSHOT</version>
+  <version>2.5.3</version>
   <description>Public Java library for CronApp's users</description>
   <url>https://github.com/technecloud/cronapi-java</url>
   <build>
