--- a/pom.xml
+++ b/pom.xml
@@ -219,7 +219,7 @@
     <dependency>
       <groupId>io.cronapp</groupId>
       <artifactId>olingo-odata2-jpa-processor-core</artifactId>
-      <version>2.5.2</version>
+      <version>${odata.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -285,5 +285,6 @@
     <project.cronospass.resource mimetype="folder/libs">lib</project.cronospass.resource>
     <project.cronospass.resource mimetype="folder/src">src/main/java</project.cronospass.resource>
     <project.cronospass.resource mimetype="folder/src">src/test/java</project.cronospass.resource>
+    <odata.version>2.6.0-SNAPSHOT</odata.version>
   </properties>
 </project>
