--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,11 @@
       <artifactId>selenium-java</artifactId>
       <version>3.141.59</version>
     </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-s3</artifactId>
+      <version>${amazon.version}</version>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <repository>
@@ -275,6 +280,7 @@
     </snapshotRepository>
   </distributionManagement>
   <properties>
+    <amazon.version>1.11.529</amazon.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
