--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,13 @@
       <artifactId>stimulsoft-reports-report</artifactId>
       <version>2020.3.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.jvnet.mock-javamail</groupId>
+      <artifactId>mock-javamail</artifactId>
+      <version>1.9</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
   <distributionManagement>
     <repository>
