--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
   "scripts": {
-    "test": "mocha"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,9 @@
     "javascript"
   ],
   "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/node": "^14.14.6",
+    "@types/jest": "^26.0.15",
     "chai": "^4.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -31,7 +34,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
-    "mocha": "^8.2.0"
+    "jest": "^26.6.3"
   },
   "dependencies": {
     "natives": "1.1.6"
