--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Public library for CronApp's users",
   "main": "cronapi.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -22,14 +22,19 @@
     "javascript"
   ],
   "devDependencies": {
+    "@types/chai": "^4.2.14",
+    "@types/node": "^14.14.6",
+    "@types/jest": "^26.0.15",
+    "chai": "^4.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel-minify": "^0.5.0",
+    "gulp-cli": "2.2.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
-    "gulp-cli": "2.2.0"
+    "jest": "^26.6.3"
   },
   "dependencies": {
     "natives": "1.1.6"
