--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   ],
   "devDependencies": {
     "@types/chai": "^4.2.14",
-    "@types/node": "^14.14.6",
     "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
     "chai": "^4.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
@@ -34,7 +34,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "jquery": "^2.1.4"
   },
   "dependencies": {
     "natives": "1.1.6"
