--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "jest": "^26.6.3",
-    "jquery": "^2.1.4"
+    "jquery": "3.5.1"
   },
   "dependencies": {
     "natives": "1.1.6"
