--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
-    "gulp-cli": "2.2.0"
+    "gulp-cli": "2.2.0",
+    "gulp-concat": "2.6.1"
   },
   "dependencies": {
+    "@zxing/library": "0.18.5",
     "natives": "1.1.6"
   }
 }
