--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "gulp-uglify": "^2.1.2",
     "gulp-util": "^3.0.8",
     "jest": "^26.6.3",
-    "jquery": "3.5.1"
+    "jquery": "3.5.1",
+    "gulp-concat": "2.6.1"
   },
   "dependencies": {
+    "@zxing/library": "0.18.5",
     "natives": "1.1.6"
   }
 }
